<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="20dp"
    android:layout_margin="20dp"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="386dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="@string/login_button"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            tools:layout_editor_absoluteX="76dp"
            tools:layout_editor_absoluteY="-5dp" />


        <FrameLayout
            android:id="@+id/fragmentHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:padding="10dp">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="@+id/Password"
                app:layout_constraintTop_toBottomOf="@+id/Password">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="225dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="31dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="35dp"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:text="@string/email"
                    app:layout_constraintBottom_toTopOf="@+id/password1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/password1"
                    android:layout_width="224dp"
                    android:layout_height="53dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="@string/password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/login2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="67dp"
                    android:layout_marginEnd="70dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/login_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/password1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </LinearLayout>
   </androidx.cardview.widget.CardView>